--- a/assets/database.css
+++ b/assets/database.css
@@ -3,10 +3,15 @@
     padding: 0;
     margin: 0;
 }
+
+body {
+    transition: 0.1s;
+}
+
 a{
     text-decoration: none;
 }
 ul,ol {
     list-style: none;
-padding: 0;
+    padding: 0;
 }
