--- a/pages/cart/cart.css
+++ b/pages/cart/cart.css
@@ -76,6 +76,7 @@ justify-content: space-between;
   border: 1px solid black;
   margin-left: 50px;
   padding: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .infor_title{
 border-bottom: 1px dotted black;
@@ -97,4 +98,10 @@ padding: 10px 0;
     background-color: red;
     color: white;
     border: none;
+}
+.continue{
+    text-align: center;
+}
+.continue a{
+    color: black;
 }
