--- a/admin/style.css
+++ b/admin/style.css
@@ -1,7 +1,8 @@
 * {
+    
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
 
 html {
@@ -12,12 +13,27 @@ ul,ol {
     list-style: none;
     padding: 0;
 }
-
+.nav_header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid black;
+    background-color: antiquewhite;
+}
+.nav_menu button{
+    border: none;
+    background-color: antiquewhite;
+}
+.nav_userLogin button{
+    border: none;
+    background-color: antiquewhite;
+}
 .sidebar{
     position: fixed;
-    top: 0;
+    top: 10;
     left: 0;
-    bottom: 0;
+    bottom: 1;
     width: 300px;
     background-color: #ddd;
 }
@@ -150,4 +166,44 @@ color: white;
     border: none;
     
 }
-
+/* phần dashboard */
+.title_dashboard{
+ display: flex;
+ justify-content: space-around;
+ margin: 30px;
+ 
+ }
+ 
+ .revenue{
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 40px;
+    font-weight: 600;
+    color: white;
+    background-color: burlywood;
+ }
+ .product{
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 40px;
+    font-weight: 600;
+    color: white;
+    background-color: brown;
+ }
+ .account{
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 40px;
+    font-weight: 600;
+    color: white;
+    background-color: cadetblue;
+ }
+ .comming{
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 40px;
+    margin: 30px;
+ }
+ .container{
+    background-color: beige;
+ }
