--- a/components/header.css
+++ b/components/header.css
@@ -133,6 +133,7 @@
 .btn_pay-showcart{
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 .btn_pay-showcart button{
     padding: 10px 30px;
